# Slicer_agent_for_surgical_planning

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  SlicerAIAgent.py
Resources/Info/: version_info.py
Resources/Prompts/: extension_cli_analyzer_prompt.md  system_prompt.md
Resources/Slicer_UI_PreAnalysis/v1/: manifest.json  ui_controls.jsonl  ui_resources.jsonl
Resources/UI/: SlicerAIAgent.ui
Resources/extensions_cookbook/: CranialImplantPlanning.md  LongBoneFractureReduction.md  OrbitalFractureReconstruction.md  PedicleScrewPlanner.md  PelvicFracturePlanning.md  ReverseShoulderArthroplasty.md  SlicerBoneReconstructionPlanner.md  SlicerOrbitSurgerySim.md  SlicerPelvicFracturePlanning.md  ZygomaticImplantPlanner.md
SlicerAIAgentLib/: ApiSanityChecker.py  CodeValidator.py  CookbookParser.py  ExtensionCLIAnalyzer.py  ExtensionCLILoader.py  InteractionManager.py  LLMClient.py  NodeChoiceResolver.py  PelvicFractureTools.py  SafeExecutor.py  SceneTools.py  SkillIndexer.py  SkillTools.py  SlicerOpGenerator.py  TurnRouter.py  UIControlIndex.py  WorkflowIntentResolver.py  WorkflowOrchestrator.py  WorkflowRuntime.py  __init__.py  cli_artifacts.py  workflow_state.py
SlicerAIAgentLib/app/: __init__.py  common.py  logic.py  logic_core.py  logic_index.py  logic_scene.py  module.py  tests_inline.py  widget.py  widget_cli.py  widget_core.py  widget_correction.py  widget_execution.py  widget_execution_flow.py  widget_replay.py  widget_reporting.py  widget_send.py  widget_settings.py  widget_streaming.py  widget_workflow.py
SlicerAIAgentLib/extension_cli_analyzer/: __init__.py  analyzer.py  api_probe.py  api_proof.py  checkpoints.py  common.py  contract_audit.py  cookbook_mapping.py  cross_stage.py  live_revision.py  llm_calls.py  logic_analysis.py  module_sessions.py  node_lifecycle.py  parameter_metadata.py  phases.py  prompt_validation.py  repair_loop.py  repair_memory.py  scan.py  schemas.py  slicer_op_manifest.py  stage4_decomposition.py  step_instructions.py  template_generation.py  template_helpers.py  v2_contracts.py  validation_contracts.py  validation_semantics.py  workflow_contracts.py  workflow_detection.py  workflow_templates.py
SlicerAIAgentLib/extension_cli_loader/: __init__.py  cache.py  choice_helpers.py  discovery_persistence.py  dispatch.py  templates.py  workflow_handlers.py  workflow_state.py
SlicerAIAgentLib/llm_client/: __init__.py  chat.py  client.py  common.py  config.py  history.py  tools.py  transport.py  utils.py
SlicerAIAgentLib/skill_indexer/: __init__.py  chunker.py  common.py  retriever_builder.py  vector_index.py
SlicerAIAgentLib/skill_tools/: __init__.py  common.py  dispatch_search.py  executor.py  readfile.py  schemas.py  setup.py  symbols.py
SlicerAIAgentLib/slicer_op_generator/: __init__.py  common.py  core.py  generator.py  run.py
Testing/: SlicerAIAgentTest.py
Testing/SlicerAIAgentTests/: __init__.py  analyzer_contracts.py  common.py  logic_suite.py  main_suite.py  workflow_tests.py
scripts/: build_rag.py  build_ui_analysis.py
(+880 files in other folders)
